<resources>
    <string name="app_name">Project UI</string>
    <string name="students_results_management_system">Students Results Management System</string>
    <string name="login_as_admin">Login As Admin</string>
    <string name="hello_admin">HELLO Admin</string>
    <string name="login_as_student">Login AS STUDENT</string>
    <string name="new_user">new user</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_of_attempts_remaining">No of attempts remaining:</string>
    <string name="back">BACK</string>
    <string name="next">NEXT</string>
    <string name="login_details">Login Details</string>
    <string name="reg_no">Reg. No:</string>
    <string name="department">Department:</string>
    <string name="faculty">Faculty:</string>
    <string name="university">University;</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="enter_a_password">Enter a Password:</string>
    <string name="enter_an_username">Enter an Username:</string>
    <string name="new_admin">NEW ADMIN</string>
    <string name="new_student">NEW STUDENT</string>
    <string name="new_admin_btn">new ADMIN</string>
    <string name="new_adm">new Admin</string>
    <string name="new_admin_login">new admin</string>
    <string name="new_administrator">new administrator</string>
    <string name="new_admins">new admin</string>
</resources>